# rxn_cluster_token_prompt

./: .gitignore  .travis.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yaml
data/maps/: 12tokens.json  group1.json  group2.json
data/test_data/: df_sample.csv  precursors-test.txt  precursors-train.txt  precursors-valid.txt  product-test.txt  product-train.txt  product-valid.txt
notebooks/: clustering_analysis.ipynb
rxn_class_token/: model.py  repo_utils.py  uspto_datasets_loader.py  utils.py
rxn_class_token/clustering/: README.md  clusterer.py  clustering_experiments.py  data_loading.py  fingerprints.py  standardize.py
rxn_class_token/clustering/scripts/: cluster_csv.py  cluster_txt.py  create_clusterer.py
rxn_class_token/onmt_utils/: metrics.py  translate.py  translator.py  utils.py
rxn_class_token/scripts/: correct.py  generate_dataset.py  generate_dataset_files.py  generate_multiple_splits.py  generate_prediction_dataset.py
rxn_cluster_token_prompt/: model.py  repo_utils.py  uspto_datasets_loader.py  utils.py
rxn_cluster_token_prompt/clustering/: clusterer.py  data_loading.py  fingerprints.py  standardize.py
rxn_cluster_token_prompt/clustering/scripts/: cluster_csv.py  create_clusterer.py
rxn_cluster_token_prompt/onmt_utils/: classification_translation.py  forward_or_retro_translation.py  internal_translation_utils.py  metrics.py  retro_metrics.py  translate.py  translator.py  utils.py
rxn_cluster_token_prompt/onmt_utils/scripts/: canonicalize_file.py  compute_retro_metrics.py  prepare_retro_metrics.py  reorder_retro_predictions.py
rxn_cluster_token_prompt/scripts/: generate_dataset_files.py
scripts/: cluster_csv  cluster_csv.py  correct.py  create_clusterer  generate_dataset  generate_multiple_splits  generate_prediction_dataset
tests/: test_generate_dataset.py
