[metadata]
name = rxn_class_token
version = attr: rxn_class_token.__version__
description = Package to create and analyze data for the class_token model
author = Alessandra Toniato @ IBM
author_email = ato@zurich.ibm.com
long_description = file: README.md
license_files = LICENSE

[options]
python_requires = >= 3.6
packages = find:
include_package_data = true

[options.entry_points]
console_scripts =
    generate_dataset = rxn_class_token.scripts.generate_dataset:generate_dataset
    generate_prediction_dataset = rxn_class_token.scripts.generate_prediction_dataset:generate_prediction_dataset
    generate_multiple_splits = rxn_class_token.scripts.generate_multiple_splits:generate_multiple_splits
    create_clusterer = rxn_class_token.clustering.scripts.create_clusterer:create_clusterer
    cluster_csv = rxn_class_token.clustering.scripts.cluster_csv:cluster_csv
    #executable-name = my_package.module:function


[options.extras_require]
dev =
    pytest>=6.1.2
    flake8>=3.8.4
    mypy>=0.790
    yapf>=0.30.0

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = true
indent_dictionary_value = true
dedent_closing_brackets = true
column_limit = 99

[mypy]
ignore_missing_imports = true

[flake8]
extend-ignore = E501

