[metadata]
name = rxn_cluster_token_prompt
version = attr: rxn_cluster_token_prompt.__version__
description = Package to create and analyze data for the enhanced retrosynthesis model
long_description = file: README.md
license_files = LICENSE

[options]
python_requires = >= 3.6
packages = find:
include_package_data = true
install_requires =
    pandas>=0.23.3
    tqdm>=4.30.0
    jupyterlab>=3.2.0
    rxn-utils>=1.0.0
    rxn-chem-utils>=1.0.0
    rxn-opennmt-py>=1.1.0
    scikit-learn>=0.23.1
    seaborn>=0.11.2
    matplotlib>=3.2.2

[options.entry_points]
console_scripts =
    generate-dataset-files = rxn_cluster_token_prompt.scripts.generate_dataset_files:main
    create-clusterer = rxn_cluster_token_prompt.clustering.scripts.create_clusterer:main
    cluster-csv = rxn_cluster_token_prompt.clustering.scripts.cluster_csv:main
    canonicalize-file = rxn_cluster_token_prompt.onmt_utils.scripts.canonicalize_file:main
    compute-retro-metrics = rxn_cluster_token_prompt.onmt_utils.scripts.compute_retro_metrics:main
    prepare-retro-metrics = rxn_cluster_token_prompt.onmt_utils.scripts.prepare_retro_metrics:main
    reorder-retro-predictions = rxn_cluster_token_prompt.onmt_utils.scripts.reorder_retro_predictions:main

[options.extras_require]
dev =
    pytest>=6.1.2
    black>=22.3.0
    isort>=5.10.1
    flake8>=3.8.4
    mypy>=0.790
    yapf>=0.30.0

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = true
indent_dictionary_value = true
dedent_closing_brackets = true
column_limit = 99

[mypy]
ignore_missing_imports = true

[flake8]
extend-ignore = E501
